@@ -270,6 +270,50 @@ var CloudCommander, Util, DOM, CloudFunc;
     };
     
     /**
+     * improve callback of funcs so
+     * we pop number of function and
+     * if it's last we call pCallBack
+     * 
+     * @param pParams_a
+     * @param pFunc - onload function
+     */
+    DOM.anyLoadInParallel        = function(pParams_a, pFunc){
+        var lRet = Util.isArray(pParams_a),
+            done = [],
+            
+            doneFunc = function (pCallBack){
+                Util.exec(pCallBack);
+                
+                if( !done.pop() )
+                    Util.exec(pFunc);
+            };
+        
+        if(!lRet){
+            pParams_a = [pParams_a];
+        }
+        
+        for(var i = 0, n = pParams_a.length; i < n; i++){            
+            var lParam = pParams_a.pop();
+            
+            if(lParam){
+                done.push(i);
+                
+                if(Util.isString(lParam) )
+                    lParam = { src : lParam };
+                
+                var lFunc = lParam.func;                
+                lParam.func = Util.retExec(doneFunc, lFunc);
+                
+                DOM.anyload(lParam);
+                
+                lRet = true;
+            }
+        }
+        
+        return lRet;
+    };
+    
+    /**
      * Функция создаёт элемент и загружает файл с src.
      * 
      * @param pParams_o = {
