@@ -85,18 +85,20 @@ var CloudCommander, Util, DOM, CloudFunc, CodeMirror;
         console.time('codemirror load');
         var lDir = cloudcmd.LIBDIRCLIENT + 'editor/codemirror/';
         
-        DOM.anyLoadOnLoad([
-            lDir + 'codemirror.css',
-            lDir + 'theme/night.css',
-            lDir + 'mode/javascript.js',
-            lDir + 'codemirror.js'],
-            
-            function(){
-                console.timeEnd('codemirror load');
-                CodeMirrorLoaded = true;
-                Util.exec(pCallBack);
-            }
-        );
+        DOM.jsload(lDir + 'codemirror.js', function(){
+            DOM.anyLoadInParallel([
+                lDir + 'codemirror.css',
+                lDir + 'theme/night.css',
+                lDir + 'mode/javascript.js',
+                ],
+                
+                function(){
+                    console.timeEnd('codemirror load');
+                    CodeMirrorLoaded = true;
+                    Util.exec(pCallBack);
+                });
+        });
+        
     }     
         
     /**
