@@ -105,10 +105,10 @@ var CloudCommander, Util, DOM, CloudFunc, $;
      */
     function load(pCallBack){
         console.time('menu load');
-
+        
         var lDir = Menu.dir;
         
-        DOM.anyLoadOnLoad([
+        DOM.anyLoadInParallel([
             lDir + 'contextMenu.js',
             lDir + 'contextMenu.css'],
             function(){
