@@ -98,7 +98,8 @@ var CloudCommander, Util, DOM, CloudFunc, $;
         console.time('fancybox load');
         var lDir = cloudcmd.LIBDIRCLIENT + 'viewer/fancybox/';
         
-        DOM.anyLoadOnLoad([
+        
+        DOM.anyLoadInParallel([
             lDir + 'jquery.fancybox.css',
             lDir + 'jquery.fancybox.js'],
             
